--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "s-ais",
   "version": "0.0.0",
-  "description": "DeLorme inReach/Explorer self-reporting service",
+  "description": "Server-AIS self-reporting service for DeLorme inReach/Explorer devices",
   "license": "MIT",
   "repository": "infinitedescent/s-ais",
   "author": {
