tweaking title and description

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "s-ais",
+  "name": "sAIS",
   "description": "Server-AIS self-reporting service for DeLorme inReach/Explorer devices",
   "keywords": [
 	"marinetraffic",
