--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "s-ais",
+  "name": "sAIS",
   "version": "0.0.0",
   "description": "Server-AIS self-reporting service for DeLorme inReach/Explorer devices",
   "license": "MIT",
