--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sAIS",
-  "version": "0.0.0",
+  "version": "0.0.3",
   "description": "Server-AIS self-reporting service for DeLorme inReach/Explorer devices",
   "license": "MIT",
   "repository": "infinitedescent/s-ais",
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "cli": "cross-env MAPSHARE_ID=identifie DEVICE_IMEI=012345678901234 REPORT_MMSI=0123456789 REPORT_SENDER=john.smith@domain.com node lib/cli.js",
+    "sync": "node lib/cli.js",
     "test": "xo && nyc ava"
   },
   "files": [
@@ -35,14 +36,14 @@
     "heroku"
   ],
   "dependencies": {
-    "meow": "^3.7.0",
     "cheerio": "0.22.0",
-    "libxmljs": "0.18.4",
+    "meow": "^3.7.0",
     "moment": "2.17.1",
-    "pg": "6.1.2",
     "pg-promise": "5.5.2",
+    "rebuild": "0.1.2",
     "request-promise-native": "1.0.3",
-    "sendgrid": "4.7.1"
+    "sendgrid": "4.7.1",
+    "xml2js": "0.4.17"
   },
   "devDependencies": {
     "ava": "^0.17.0",
