--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "body-parser": "1.16.0",
     "cheerio": "0.22.0",
     "express": "4.14.1",
-    "jade": "1.11.0",
     "meow": "3.7.0",
     "method-override": "2.3.7",
     "moment": "2.17.1",
     "nib": "1.1.2",
     "pg-promise": "5.5.2",
+    "pug": "2.0.0-rc.2",
     "request": "2.79.0",
     "request-promise-native": "1.0.3",
     "sendgrid": "4.7.1",
