adding initial self hosted version

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# OS
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -35,3 +38,6 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# IDE
+.idea
