IMEI is not a required
Removing IMEI from entire project, only MapShare Identifier is needed.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "ava": "0.17.0",
     "coveralls": "2.11.12",
     "nyc": "10.0.0",
+    "proxyquire": "1.8.0",
+    "sinon": "2.3.5",
     "xo": "0.17.0"
   },
   "xo": {
