--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "pug": "2.0.0-rc.2",
     "request": "2.79.0",
     "request-promise-native": "1.0.3",
-    "sendgrid": "4.7.1",
+    "sendgrid": "^2.0.0",
     "stylus": "0.54.5",
     "xml2js": "0.4.17"
   },
