--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sAIS",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Server-AIS self-reporting service for DeLorme inReach/Explorer devices",
-  "license": "MIT",
+  "license": "GPL",
   "repository": "infinitedescent/s-ais",
   "author": {
     "name": "Hays Clark",
