--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "devDependencies": {
     "ava": "2.0.0",
     "coveralls": "3.0.3",
+    "husky": "^2.3.0",
     "nodemon": "1.19.1",
     "nyc": "14.1.1",
     "proxyquire": "1.8.0",
