--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sAIS",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Server-AIS self-reporting service for Garmin/DeLorme inReach/Explorer devices",
   "license": "GPL-3.0-only",
   "repository": "infinitedescent/s-ais",
@@ -15,8 +15,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev-sais": "nodemon --watch 'lib' --watch 'bin' --exec 'node' bin/sync",
-    "dev-server": "nodemon -e js,pug --watch server.js --watch 'views/**/*.pug' --watch lib --watch public --watch routes ./server.js",
+    "dev-sais": "nodemon -r dotenv/config --watch 'lib' --watch 'bin' --exec 'node' bin/sync",
+    "dev-server": "nodemon -r dotenv/config -e js,pug --watch server.js --watch 'views/**/*.pug' --watch lib --watch public --watch routes ./server.js",
     "test": "xo && nyc ava",
     "snyk-protect": "snyk protect",
     "prepublish": "npm run snyk-protect"
@@ -51,6 +51,7 @@
   "devDependencies": {
     "ava": "2.0.0",
     "coveralls": "3.0.3",
+    "dotenv": "^8.0.0",
     "husky": "^2.3.0",
     "nodemon": "1.19.1",
     "nyc": "14.1.1",
