--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sAIS",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Server-AIS self-reporting service for Garmin/DeLorme inReach/Explorer devices",
   "license": "GPL-3.0-only",
   "repository": "infinitedescent/s-ais",
@@ -44,7 +44,7 @@
     "pug": "2.0.3",
     "request": "2.88.0",
     "request-promise-native": "1.0.3",
-    "sendgrid": "5.2.3",
+    "sendgrid": "^2.0.0",
     "stylus": "0.54.5",
     "xml2js": "0.4.17"
   },
