--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
   ],
   "dependencies": {
     "body-parser": "1.18.2",
-    "cheerio": "0.22.0",
     "express": "4.16.0",
     "method-override": "2.3.10",
     "moment": "2.19.3",
     "nib": "1.1.2",
     "pug": "2.0.3",
+    "puppeteer": "^7.1.0",
     "request": "2.88.0",
     "request-promise-native": "1.0.3",
     "sendgrid": "^2.0.0",
